feat: add method-override

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
             {{this.name}}、{{this.Date}}、{{this.amount}}
             <a href="./records/{{this._id}}/edit">修改</a>
             <form
-              action="./records/{{this._id}}/delete"
+              action="./records/{{this._id}}?_method=DELETE"
               method="POST"
               style="inline"
             >
