--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -31,7 +31,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        {{! <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">
@@ -46,7 +46,7 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div> }}
       </div>
     </nav>
 
