--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
     />
-    <title>私房手帳</title>
+    <title>私房の手帳</title>
   </head>
   <body>
 
@@ -18,7 +18,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
           <i class="fa-solid fa-pencil fa-sm"></i>
-          私房手帳
+          私房の手帳
         </a>
         <button
           class="navbar-toggler"
