--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,7 +9,7 @@
     />
     <title>私房の手帳</title>
   </head>
-  <body>
+  <body style="background-color:rgb(253, 241, 225);">
 
     <nav
       class="navbar navbar-expand-lg navbar-light"
