--- a/views/register.hbs
+++ b/views/register.hbs
@@ -5,10 +5,26 @@
       style="border-radius:35px;"
     >
       <h1 class="text-center nt-3">
-        Login
+        <i class="fa-solid fa-user-plus"></i>
+        Register
       </h1>
 
       <form action="" method="POST" class="mx-3">
+        <div class="my-3">
+          <label for="name" class="mb-2" style="font-size: 1.2rem;"><i
+              class="fa-solid fa-envelope"
+            ></i>
+            Name :
+          </label>
+          <input
+            type="text"
+            name="name"
+            id="name"
+            class="form-control"
+            placeholder="Enter Your Name"
+          />
+        </div>
+
         <div class="my-3">
           <label for="email" class="mb-2" style="font-size: 1.2rem;"><i
               class="fa-solid fa-envelope"
@@ -38,20 +54,35 @@
             placeholder="Enter Password"
           />
         </div>
+
+        <div class="my-3">
+          <label for="confirmPassword" style="font-size: 1.2rem;">
+            <i class="fa-sharp fa-solid fa-check-double"></i>
+            Confirm Password:
+          </label>
+          <input
+            type="password"
+            name="confirmPassword"
+            id="confirmPassword"
+            class="form-control"
+            placeholder="Enter Again Password"
+          />
+        </div>
+
         <div class="d-flex justify-content-center">
           <button
             type="submit"
             class="btn btn-primary col-md-6"
             style="border-radius:20px;"
           >
-            <i class="fa-solid fa-lock-open"></i>
-            Login
+            <i class="fa-solid fa-check"></i>
+            SIGN UP
           </button>
         </div>
       </form>
       <p class="mt-3 d-flex justify-content-start" style="margin-bottom:0%">
-        No Account ?
-        <a href="/users/register" class="mx-1">SIGN UP</a>
+        Have An Account ?
+        <a href="/users/login" class="mx-1">Login</a>
       </p>
     </div>
   </div>
