--- a/views/register.hbs
+++ b/views/register.hbs
@@ -37,6 +37,7 @@
             id="email"
             class="form-control"
             placeholder="Enter Email"
+            required
           />
         </div>
 
@@ -52,6 +53,7 @@
             id="password"
             class="form-control"
             placeholder="Enter Password"
+            required
           />
         </div>
 
@@ -66,6 +68,7 @@
             id="confirmPassword"
             class="form-control"
             placeholder="Enter Again Password"
+            required
           />
         </div>
 
