feat: add register function

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -11,9 +11,8 @@
 
       <form action="" method="POST" class="mx-3">
         <div class="my-3">
-          <label for="name" class="mb-2" style="font-size: 1.2rem;"><i
-              class="fa-solid fa-envelope"
-            ></i>
+          <label for="name" class="mb-2" style="font-size: 1.2rem;">
+            <i class="fa-solid fa-signature"></i>
             Name :
           </label>
           <input
@@ -22,13 +21,13 @@
             id="name"
             class="form-control"
             placeholder="Enter Your Name"
+            value="{{name}}"
           />
         </div>
 
         <div class="my-3">
-          <label for="email" class="mb-2" style="font-size: 1.2rem;"><i
-              class="fa-solid fa-envelope"
-            ></i>
+          <label for="email" class="mb-2" style="font-size: 1.2rem;">
+            <i class="fa-solid fa-envelope"></i>
             Email :
           </label>
           <input
@@ -37,14 +36,14 @@
             id="email"
             class="form-control"
             placeholder="Enter Email"
+            value="{{eamil}}"
             required
           />
         </div>
 
         <div class="my-3">
-          <label for="password" style="font-size: 1.2rem;"><i
-              class="fa-solid fa-lock"
-            ></i>
+          <label for="password" style="font-size: 1.2rem;">
+            <iclass="fa-solid fa-lock"></i>
             Password:
           </label>
           <input
