--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,11 +8,10 @@
         Login
       </h1>
 
-      <form action="" method="POST" class="mx-3">
+      <form action="/users/login" method="POST" class="mx-3">
         <div class="my-3">
-          <label for="email" class="mb-2" style="font-size: 1.2rem;"><i
-              class="fa-solid fa-envelope"
-            ></i>
+          <label for="email" class="mb-2" style="font-size: 1.2rem;">
+            <i class="fa-solid fa-envelope"></i>
             Email :
           </label>
           <input
@@ -25,9 +24,8 @@
         </div>
 
         <div class="my-3">
-          <label for="password" style="font-size: 1.2rem;"><i
-              class="fa-solid fa-lock"
-            ></i>
+          <label for="password" style="font-size: 1.2rem;">
+            <i class="fa-solid fa-lock"></i>
             Password:
           </label>
           <input
@@ -44,11 +42,11 @@
             class="btn btn-primary col-md-6"
             style="border-radius:20px;"
           >
-            <i class="fa-solid fa-lock-open"></i>
             Login
           </button>
         </div>
       </form>
+
       <p class="mt-3 d-flex justify-content-start" style="margin-bottom:0%">
         No Account ?
         <a href="/users/register" class="mx-1">SIGN UP</a>
