--- a/views/register.hbs
+++ b/views/register.hbs
@@ -9,7 +9,7 @@
         Register
       </h1>
 
-      <form action="" method="POST" class="mx-3">
+      <form action="/users/register" method="POST" class="mx-3">
         <div class="my-3">
           <label for="name" class="mb-2" style="font-size: 1.2rem;">
             <i class="fa-solid fa-signature"></i>
