feat: add relations between User and record models

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -39,6 +39,7 @@
               id="category"
               name="category"
               class="form-control"
+              value="{{record.category}}"
             >
               <option>交通</option>
               <option>飲食</option>
