--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
 <div class="row mt-4">
   <div class="col-md-6 m-auto">
     <div
-      class="card card-body shadow p-3 mb-5 bg-body"
+      class="card card-body shadow p-3 mb-5 bg-body mx-3"
       style="border-radius:35px;"
     >
       <h1 class="text-center nt-3">
@@ -23,7 +23,7 @@
           />
         </div>
 
-        <div class="my-3">
+        <div class="mt-3">
           <label for="password" style="font-size: 1.2rem;">
             <i class="fa-solid fa-lock"></i>
             Password:
@@ -36,6 +36,13 @@
             placeholder="Enter Password"
           />
         </div>
+        <p
+          class="my-1 mb-2 d-flex justify-content-end"
+          style="margin-bottom:0%;font-size: 0.8rem;"
+        >
+          No Account ?
+          <a href="/users/register" class="mx-1">SIGN UP</a>
+        </p>
         <div class="d-flex justify-content-center">
           <button
             type="submit"
@@ -47,10 +54,6 @@
         </div>
       </form>
 
-      <p class="mt-3 d-flex justify-content-start" style="margin-bottom:0%">
-        No Account ?
-        <a href="/users/register" class="mx-1">SIGN UP</a>
-      </p>
     </div>
   </div>
 </div>
