--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,28 +10,31 @@
     <title>私房の手帳</title>
   </head>
   <body style="background-color:rgb(253, 241, 225);">
+    <header>
 
-    <nav
-      class="navbar navbar-expand-lg navbar-light"
-      style="background-color: rgba(238, 231, 174, 0.845);"
-    >
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">
-          <i class="fa-solid fa-pencil fa-sm"></i>
-          私房の手帳
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        {{! <div class="collapse navbar-collapse" id="navbarNav">
+      <nav
+        class="navbar navbar-expand-lg navbar-light justify-content-between"
+        style="background-color: rgba(238, 231, 174, 0.845);"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">
+            {{#if isAuthenticated}}
+              <i class="fa-solid fa-pencil fa-sm"></i>
+            {{/if}}
+            私房の手帳
+          </a>
+
+          {{#if isAuthenticated}}
+            <a href="/users/logout" class="btn btn-outline-dark">
+              Logout
+            </a>
+          {{else}}
+            <a href="/users/login" class="btn btn-outline-dark">
+              Login
+            </a>
+          {{/if}}
+
+          {{! <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">
@@ -47,8 +50,9 @@
             </li>
           </ul>
         </div> }}
-      </div>
-    </nav>
+        </div>
+      </nav>
+    </header>
 
     {{{body}}}
 
