--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,6 +7,7 @@
       <h1 class="text-center nt-3">
         Login
       </h1>
+      {{> message}}
 
       <form action="/users/login" method="POST" class="mx-3">
         <div class="my-3">
