feat: add bcrypt to login

--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -22,7 +22,7 @@
 
 {{#if success_msg}}
   <div
-    class="alert alert-danger d-flex align-items-center alert-dismissible fade show"
+    class="alert alert-success d-flex align-items-center alert-dismissible fade show"
     role="alert"
   >
     <strong>
