--- a/views/login.hbs
+++ b/views/login.hbs
@@ -47,11 +47,13 @@
         <div class="d-flex justify-content-center">
           <button
             type="submit"
-            class="btn btn-primary col-md-6"
+            class="btn btn-primary col-md-6 mx-1"
             style="border-radius:20px;"
           >
             Login
           </button>
+          <a href="/auth/facebook" class="btn btn-info col-md-6"
+            style="border-radius:20px;">Facebook Login</a>
         </div>
       </form>
 
