--- a/views/register.hbs
+++ b/views/register.hbs
@@ -78,6 +78,8 @@
             <i class="fa-solid fa-check"></i>
             SIGN UP
           </button>
+          <a href="/auth/facebook" class="btn btn-info col-md-6"
+            style="border-radius:20px;">Facebook Login</a>
         </div>
       </form>
       <p class="mt-3 d-flex justify-content-start" style="margin-bottom:0%">
