--- a/views/new.hbs
+++ b/views/new.hbs
@@ -38,9 +38,12 @@
               name="category"
               class="form-control"
             >
-              <option>交通</option>
-              <option>飲食</option>
-              <option>醫療</option>
+              <option selected>請選擇類別</option>
+              <option value="1"  {{#if filter}} selected {{/if}}>家具務業</option>
+              <option value="2" {{#if filter}} selected {{/if}}>交通出行</option>
+              <option value="3" {{#if filter}} selected {{/if}}>休閒娛樂</option>
+              <option value="4" {{#if filter}} selected {{/if}}>餐飲食品</option>
+              <option value="5" {{#if filter}} selected {{/if}}>其他</option>
             </select>
           </div>
         </div>
