--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,7 @@
 <div class="container-xl">
   <div class="d-flex justify-content-center">
     <div class="row">
+      {{> message}}
 
       <div class="row mb-4 g-2 align-items-center">
         <form action="/">
