--- a/views/new.hbs
+++ b/views/new.hbs
@@ -7,6 +7,7 @@
           <div class="col-md-8">
             <input
               type="text"
+              id="name"
               placeholder="name"
               name="name"
               value="{{record.name}}"
@@ -52,6 +53,7 @@
           <label for="amount" class="mb-1 col-md-2 col-form-label">金額* :</label>
           <div class="col-md-8">
             <input
+              id="amount"
               type="number"
               placeholder="請輸入大於0以上的金額"
               name="amount"
