--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -34,24 +34,25 @@
 
         <div class="row mb-4 g-2 align-items-center">
           <label
-            for="category"
+            for="categoryId"
             class="mb-1 col-md-2 col-form-label"
-          >類別</label>
+          >類別*
+          </label>
           <div class="col-md-8">
             <select
               type="text"
-              id="category"
-              name="category"
+              id="categoryId"
+              name="categoryId"
               class="form-control"
-              value="{{record.category}}"
-              required
-            >
-              <option disabled selected>請選擇類別</option>
-              <option value="1" {{#if filter}} selected {{/if}}>家具務業</option>
-              <option value="2" {{#if filter}} selected {{/if}}>交通出行</option>
-              <option value="3" {{#if filter}} selected {{/if}}>休閒娛樂</option>
-              <option value="4" {{#if filter}} selected {{/if}}>餐飲食品</option>
-              <option value="5" {{#if filter}} selected {{/if}}>其他</option>
+              required>
+              {{#each categories}}
+              <option value="{{this._id}}" 
+              {{#if this.preset}}
+              selected="selected" 
+              {{/if}}>
+              {{this.name}}
+              </option>
+              {{/each}}
             </select>
           </div>
         </div>
