--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,62 +1,72 @@
-<div class="row mt-4">
-  <div class="col-md-6 m-auto">
-    <div
-      class="card card-body shadow p-3 mb-5 bg-body mx-3"
-      style="border-radius:35px;"
-    >
-      <h1 class="text-center nt-3">
-        Login
-      </h1>
-      {{> message}}
+<div class="container">
+  
+  <div class="row mt-4">
+    <div class="col-md-6 m-auto">
+      <div
+        class="card card-body shadow p-3 mb-5 bg-body mx-3"
+        style="border-radius:35px;"
+      >
+        <h1 class="text-center nt-3">
+          Login
+        </h1>
+        {{> message}}
 
-      <form action="/users/login" method="POST" class="mx-3">
-        <div class="my-3">
-          <label for="email" class="mb-2" style="font-size: 1.2rem;">
-            <i class="fa-solid fa-envelope"></i>
-            Email :
-          </label>
-          <input
-            type="email"
-            name="email"
-            id="email"
-            class="form-control"
-            placeholder="Enter Email"
-          />
-        </div>
+        <form action="/users/login" method="POST" class="mx-3">
+          <div class="my-3">
+            <label for="email" class="mb-2" style="font-size: 1.2rem;">
+              <i class="fa-solid fa-envelope"></i>
+              Email :
+            </label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="form-control"
+              placeholder="Enter Email"
+            />
+          </div>
 
-        <div class="mt-3">
-          <label for="password" style="font-size: 1.2rem;">
-            <i class="fa-solid fa-lock"></i>
-            Password:
-          </label>
-          <input
-            type="password"
-            name="password"
-            id="password"
-            class="form-control"
-            placeholder="Enter Password"
-          />
-        </div>
-        <p
-          class="my-1 mb-2 d-flex justify-content-end"
-          style="margin-bottom:0%;font-size: 0.8rem;"
-        >
-          No Account ?
-          <a href="/users/register" class="mx-1">SIGN UP</a>
-        </p>
-        <div class="d-flex justify-content-center">
-          <button
-            type="submit"
-            class="btn btn-primary col-md-6 mx-1"
-            style="border-radius:20px;"
+          <div class="mt-3">
+            <label for="password" style="font-size: 1.2rem;">
+              <i class="fa-solid fa-lock"></i>
+              Password:
+            </label>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              class="form-control"
+              placeholder="Enter Password"
+            />
+          </div>
+          <p
+            class="my-1 mb-2 d-flex justify-content-end"
+            style="margin-bottom:0%;font-size: 0.8rem;"
           >
-            Login
-          </button>
-          <a href="/auth/facebook" class="btn btn-info col-md-6"
-            style="border-radius:20px;">Facebook Login</a>
-        </div>
-      </form>
+            No Account ?
+            <a href="/users/register" class="mx-1">SIGN UP</a>
+          </p>
+          
+            <div class="d-flex justify-content-center col-12">
+              <button
+              type="submit"
+              class="btn btn-primary mb-3"
+              style="border-radius:20px;"
+              >
+                Login
+              </button>
+            </div>
 
+            <div class="d-flex justify-content-center col">
+              <a href="/auth/facebook" class="btn btn-info col-md me-2"
+                style="border-radius:20px;">Facebook Login</a>
+              <a href="/auth/google" class="btn btn-info col-md"
+              style="border-radius:20px;">Google Login</a>
+            </div>
+          
+        </form>
+
+      </div>
     </div>
   </div>
 </div>
