--- a/views/new.hbs
+++ b/views/new.hbs
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col-12 col-lg-10 col-xl-8 mx-auto">
       <form action="/records" method="POST">
-        <div class="row mb-4 g-2 align-items-center">
+        <div class="row mb-3 g-2 align-items-center">
           <label for="name" class="mb-1 col-md-2 col-form-label">名稱* :</label>
-          <div class="col-md-8">
+          <div class="col-md-9">
             <input
               type="text"
               id="name"
@@ -17,9 +17,9 @@
           </div>
         </div>
 
-        <div class="row mb-4 g-2 align-items-center">
+        <div class="row mb-3 g-2 align-items-center">
           <label for="Date" class="mb-1 col-md-2 col-form-label">日期* :</label>
-          <div class="col-md-8">
+          <div class="col-md-9">
             <input
               type="date"
               name="Date"
@@ -31,16 +31,16 @@
           </div>
         </div>
 
-        <div class="row mb-4 g-2 align-items-center">
+        <div class="row mb-3 g-2 align-items-center">
          <label
             for="categoryId"
             class="mb-1 col-md-2 col-form-label"
           >類別*
           </label>
-          <div class="col-md-8">
+          <div class="col-md-9">
             <select
               type="text"
-              id="category"
+              id="categoryId"
               name="categoryId"
               class="form-control"
               required>
@@ -54,7 +54,7 @@
 
         <div class="row mb-4 g-2 align-items-center">
           <label for="amount" class="mb-1 col-md-2 col-form-label">金額* :</label>
-          <div class="col-md-8">
+          <div class="col-md-9">
             <input
               id="amount"
               type="number"
@@ -67,12 +67,19 @@
           </div>
         </div>
 
-        <div class="row mb-4 g-2 align-items-center">
-          <button
-            type="submit"
-            class="btn btn-primary col-md-10"
-          >新增支出</button>
+        <div class="row mb-4 g-2 align-items-center col-auto">
+          <div class="d-flex justify-content-center col-md">
+            <button
+              type="submit"
+              class="btn btn-primary col-md-6"
+            >新增支出</button>
+          </div>
+
+          <div class="d-flex justify-content-center col-md">
+            <a href="/" class="btn btn-secondary col-md-6">返回</a>
+          </div>
         </div>
+        
       </form>
     </div>
   </div>
